--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://github.com/eladshoham1/search-algo-visualizer",
+  "homepage": "https://eladshoham1.github.io/search-algo-visualizer",
   "devDependencies": {
     "gh-pages": "^6.1.1"
   }
